Stopped body scroll on mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
     height: 100%;
+    overflow-y: hidden;
 }
 
 button {
@@ -21,4 +22,8 @@ button[disabled] {
 #app {
     height: 100%;
     display: flex;
+}
+
+* {
+    -webkit-overflow-scrolling: touch;
 }
